--- a/index.html
+++ b/index.html
@@ -1,63 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AgriSmart Hub | Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AgriSmart Hub - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="innovations.html">Innovations</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <!-- Navbar -->
-  <nav>
-    <h2>🌾 AgriSmart Hub</h2>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="innovations.html">Innovations</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+    <section class="hero-section">
+        <div class="container text-center text-white">
+            <h1 class="display-4 mb-4">AgriSmart Hub</h1>
+            <button class="btn btn-light btn-lg">Join Now</button>
+        </div>
+    </section>
 
-  <!-- Hero Section -->
-  <section>
-    <h1>Empowering Agriculture Through Innovation</h1>
-    <p>Connecting farmers, buyers, and agri-experts for a smarter, greener, and more digital future.</p>
-    <a href="about.html">Join Now</a>
-  </section>
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Smart Farming Tech</h5>
+                            <p class="card-text">Advanced technology for modern agriculture.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Market Access Platform</h5>
+                            <p class="card-text">Connect farmers with buyers.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Climate Advisory Services</h5>
+                            <p class="card-text">Weather and climate insights.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Features Section -->
-  <section>
-    <h2>Our Key Features</h2>
+    <footer class="py-4">
+        <div class="container text-center">
+            <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="#" class="text-white mx-2">FB</a>
+                <a href="#" class="text-white mx-2">TW</a>
+                <a href="#" class="text-white mx-2">IG</a>
+            </div>
+        </div>
+    </footer>
 
-    <div>
-      <h3>Smart Farming Technology</h3>
-      <img src="https://images.unsplash.com/photo-1625246333195-78d9c38ad449?auto=format&fit=crop&w=1470&q=80" alt="Smart Farming Technology">
-      <p>Utilize IoT sensors, drones, and AI analytics to enhance productivity and sustainability on farms.</p>
-    </div>
-
-    <div>
-      <h3>Market Access Platform</h3>
-      <img src="https://images.unsplash.com/photo-1586771107445-d3ca888129ff?auto=format&fit=crop&w=1471&q=80" alt="Market Access Platform">
-      <p>Bridge the gap between farmers and buyers with transparent digital trade and fair pricing systems.</p>
-    </div>
-
-    <div>
-      <h3>Climate Advisory Services</h3>
-      <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1470&q=80" alt="Climate Advisory Services">
-      <p>Get data-driven insights on weather and soil to help farmers adapt to climate change and reduce risks.</p>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 AgriSmart Hub. All rights reserved.</p>
-    <div>
-      <a href="#">Facebook</a> |
-      <a href="#">Twitter</a> |
-      <a href="#">Instagram</a>
-    </div>
-  </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
