--- a/about.html
+++ b/about.html
@@ -1,118 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About | AgriSmart Hub</title>
-
-  <!-- Bootstrap 5 CSS (CDN) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Icons (for modern icons) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - AgriSmart Hub</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">AgriSmart Hub</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navMenu">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="innovations.html">Innovations</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Hero -->
-  <section class="py-5 text-center bg-light">
-    <div class="container">
-      <h1 class="text-success fw-bold">About AgriSmart Hub</h1>
-      <p class="lead text-muted">Connecting farmers, buyers, and experts for a smarter agricultural future.</p>
-    </div>
-  </section>
-
-  <!-- Two-column About Content -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <!-- Image -->
-        <div class="col-md-6 mb-4 mb-md-0">
-          <img src="images/image1.jpg" alt="Farmers using mobile devices" class="img-fluid rounded-3 shadow-sm">
-        </div>
-
-        <!-- Text -->
-        <div class="col-md-6">
-          <h2 class="text-success">Who We Are</h2>
-          <p>AgriSmart Hub is an innovative platform dedicated to empowering farmers with technology-driven solutions. We connect farmers with buyers, markets, and experts to improve productivity and sustainability.</p>
-          <p>Our goal is to make farming smarter, more efficient, and environmentally friendly for the next generation.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Mission & Vision cards (Updated Icons Only) -->
-  <section class="py-5 bg-white">
-    <div class="container text-center">
-      <h2 class="text-success mb-4 fw-bold">Our Mission & Vision</h2>
-      <div class="row">
-        <!-- Mission Card -->
-        <div class="col-md-6 mb-3">
-          <div class="card shadow-sm border-0 h-100">
-            <div class="card-body">
-              <i class="bi bi-gear-fill text-success display-4 mb-3"></i>
-              <h5 class="card-title text-success fw-bold">Mission</h5>
-              <p>To revolutionize agriculture through smart technologies, empowering farmers with data-driven insights, automation, and digital tools for sustainable growth.</p>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="innovations.html">Innovations</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
             </div>
-          </div>
         </div>
+    </nav>
 
-        <!-- Vision Card -->
-        <div class="col-md-6 mb-3">
-          <div class="card shadow-sm border-0 h-100">
-            <div class="card-body">
-              <i class="bi bi-tree-fill text-success display-4 mb-3"></i>
-              <h5 class="card-title text-success fw-bold">Vision</h5>
-              <p>To build a connected, eco-friendly, tech-driven farming community that thrives on innovation, sustainability, and smart collaboration in the digital age.</p>
+    <!-- Two Column Layout -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <img src="assets/images/about-image.jpg" alt="About AgriSmart Hub" class="img-fluid rounded">
+                </div>
+                <div class="col-md-6">
+                    <h2>Our Story</h2>
+                    <p>AgriSmart Hub was founded with a vision to revolutionize agriculture through technology. We believe in empowering farmers with smart solutions that increase productivity and sustainability.</p>
+                    <p>Our platform connects the entire agricultural ecosystem - from farmers to buyers and experts - creating a seamless experience for all stakeholders.</p>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Progress Section (unchanged) -->
-  <section class="py-5 text-center">
-    <div class="container">
-      <h2 class="text-success mb-4">Our Progress</h2>
-      <p>We are just getting started on our digital farming journey!</p>
-      <div class="progress" style="height: 30px;">
-        <div class="progress-bar bg-success progress-bar-striped" role="progressbar" style="width: 20%;">20% Digitalization Progress</div>
-      </div>
-    </div>
-  </section>
+    <!-- Mission & Vision -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-md-6">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <i class="bi bi-bullseye display-4 text-primary"></i>
+                            <h5 class="card-title mt-3">Our Mission</h5>
+                            <p class="card-text">To democratize access to agricultural technology and create sustainable farming communities through innovation and collaboration.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card h-100 text-center">
+                        <div class="card-body">
+                            <i class="bi bi-eye display-4 text-primary"></i>
+                            <h5 class="card-title mt-3">Our Vision</h5>
+                            <p class="card-text">To be the leading platform that transforms traditional farming into smart, efficient, and profitable agricultural practices worldwide.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Footer -->
-  <footer class="bg-success text-white text-center py-3">
-    <div class="container">
-      <p>&copy; 2025 AgriSmart Hub | All Rights Reserved</p>
-    </div>
-  </footer>
+    <!-- Progress Section -->
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Our Progress</h2>
+            <div class="row">
+                <div class="col-md-8 mx-auto">
+                    <h5>Farmer Digitalization Target</h5>
+                    <div class="progress mb-4">
+                        <div class="progress-bar" style="width: 80%">80%</div>
+                    </div>
+                    
+                    <h5>Technology Adoption Rate</h5>
+                    <div class="progress mb-4">
+                        <div class="progress-bar" style="width: 65%">65%</div>
+                    </div>
+                    
+                    <h5>Market Access Improvement</h5>
+                    <div class="progress mb-4">
+                        <div class="progress-bar" style="width: 75%">75%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- Bootstrap JS bundle (includes popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer -->
+    <footer class="py-4">
+        <div class="container text-center">
+            <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </body>
 </html>
- 
