--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgriSmart Hub - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
@@ -26,37 +27,40 @@
         </div>
     </nav>
 
+    <!-- Hero Section -->
     <section class="hero-section">
-        <div class="container text-center text-white">
-            <h1 class="display-4 mb-4">AgriSmart Hub</h1>
+        <div class="container text-center">
+            <h1 class="display-4 mb-4">Transforming Agriculture with Technology</h1>
+            <p class="lead mb-4">Connecting farmers, buyers, and experts for sustainable farming</p>
             <button class="btn btn-light btn-lg">Join Now</button>
         </div>
     </section>
 
+    <!-- Features Section -->
     <section class="py-5">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-4">
+            <div class="row g-4">
+                <div class="col-md-4">
                     <div class="card h-100 text-center">
                         <div class="card-body">
                             <h5 class="card-title">Smart Farming Tech</h5>
-                            <p class="card-text">Advanced technology for modern agriculture.</p>
+                            <p class="card-text">Advanced technology solutions for modern farming practices and increased productivity.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4">
                     <div class="card h-100 text-center">
                         <div class="card-body">
                             <h5 class="card-title">Market Access Platform</h5>
-                            <p class="card-text">Connect farmers with buyers.</p>
+                            <p class="card-text">Direct market access for farmers to sell their produce at fair prices.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4">
                     <div class="card h-100 text-center">
                         <div class="card-body">
                             <h5 class="card-title">Climate Advisory Services</h5>
-                            <p class="card-text">Weather and climate insights.</p>
+                            <p class="card-text">Real-time climate data and advisory services for better crop planning.</p>
                         </div>
                     </div>
                 </div>
@@ -64,17 +68,20 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer class="py-4">
         <div class="container text-center">
             <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
             <div class="social-icons">
-                <a href="#" class="text-white mx-2">FB</a>
-                <a href="#" class="text-white mx-2">TW</a>
-                <a href="#" class="text-white mx-2">IG</a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </body>
 </html>
