--- a/services.html
+++ b/services.html
@@ -1,122 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services - AgriSmart Hub</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+   <meta charset="UTF-8">
+   <meta name= "viewport" content= "width=device-width, initial-scale=1.0"> 
+   <title> AgriSmart Hub - Services</title>
+
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="index.html">AgriSmart</a>
+            <button class="navbar-toggler" type="button" data-bs-toggler="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="innovations.html">Innovations</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <ul class="navbar-nav">
+                    <li class="nav-item"> <a class="nav-link" href="index.html">Home </a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="about.html">About us </a> </li>
+                    <li class="nav-item"> <a class="nav-link active" href="services.html">Services </a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="innovations.html">Innoviations </a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="contact.html"> Contact </a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Services Grid -->
-    <section class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-5">Our Services</h2>
-            <div class="row g-4">
-                <!-- Service 1 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="assets/images/service1.jpg" class="card-img-top" alt="Smart Irrigation">
-                        <div class="card-body">
-                            <h5 class="card-title">Smart Irrigation</h5>
-                            <p class="card-text">Automated irrigation systems that optimize water usage based on soil moisture and weather conditions.</p>
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Service 2 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="assets/images/service2.jpg" class="card-img-top" alt="Drone Mapping">
-                        <div class="card-body">
-                            <h5 class="card-title">Drone Mapping</h5>
-                            <p class="card-text">Aerial surveillance and mapping services for crop monitoring and field analysis.</p>
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Service 3 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="assets/images/service3.jpg" class="card-img-top" alt="Digital Marketplace">
-                        <div class="card-body">
-                            <h5 class="card-title">Digital Marketplace</h5>
-                            <p class="card-text">Online platform connecting farmers directly with buyers and distributors.</p>
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Service 4 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="assets/images/service4.jpg" class="card-img-top" alt="Crop Monitoring">
-                        <div class="card-body">
-                            <h5 class="card-title">Crop Monitoring</h5>
-                            <p class="card-text">Real-time crop health monitoring using sensors and satellite imagery.</p>
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Service 5 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="assets/images/service5.jpg" class="card-img-top" alt="Soil Analysis">
-                        <div class="card-body">
-                            <h5 class="card-title">Soil Analysis</h5>
-                            <p class="card-text">Comprehensive soil testing and analysis for optimal fertilizer recommendations.</p>
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Service 6 -->
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <img src="assets/images/service6.jpg" class="card-img-top" alt="Weather Advisory">
-                        <div class="card-body">
-                            <h5 class="card-title">Weather Advisory</h5>
-                            <p class="card-text">Accurate weather forecasts and farming advisory based on climatic conditions.</p>
-                            <button class="btn btn-primary">Learn More</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="container my-5">
+        <h1 class="text-center mb-4">Our Services</h1>
+        <h4 class="text-center md-5">Explore our services designed to help farmers thrive in the modern world! </h4>
 
-    <!-- Footer -->
-    <footer class="py-4">
-        <div class="container text-center">
-            <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
-            <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+        <div class="row g-4">
+            
+            <div class="col-md-4">    <!-- card 1-->
+                <div class="card d-flex flex-column h-100">
+                    <img src="images/smartIrrigation.jpg" class="card-img-top" alt="Smart Irrigation">
+                    <div class="card-body">
+                        <h5 class="card-title">Smart Irrigation</h5>
+                        <p class="card-text">Optimize water usage for efficient farming with real-time weather data and soil moisture sensors. </p>
+                        <a href="#" class="btn btn-success">Learn More </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">    <!-- card 2-->
+                <div class="card d-flex flex-column h-100">
+                    <img src="images/droneMapping.jpg" class="card-img-top" alt="Drone Mapping">
+                    <div class="card-body">
+                        <h5 class="card-title">Drone Mapping </h5>
+                        <p class="card-text">Get aerial views of your farm and analyze crop health with drone-based mapping technology. </p>
+                        <a href="#" class="btn btn-success">Learn More </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">    <!-- card 3-->
+                <div class="card d-flex flex-column h-100">
+                    <img src="images/digitalMarketplace.jpg" class="card-img-top" alt="Digital Marketplace">
+                    <div class="card-body">
+                        <h5 class="card-title">Digital Marketplace </h5>
+                        <p class="card-text">Connect with buyers and sellers in a secure online marketplace for agricultural products. </p>
+                        <a href="#" class="btn btn-success">Learn More </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">    <!-- card 4-->
+                <div class="card d-flex flex-column h-100">
+                    <img src="images/precisionFarmingTools.jpg" class="card-img-top" alt="Precision Farming Tools">
+                    <div class="card-body">
+                        <h5 class="card-title">Precision Farming Tools </h5>
+                        <p class="card-text">Enhance your farming operations with tools that optimize yield prediction and resource use. </p>
+                        <a href="#" class="btn btn-success">Learn More </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">    <!-- card 5-->
+                <div class="card d-flex flex-column h-100">
+                    <img src="images/cropHealthMonitoring.jpg" class="card-img-top" alt="Crop Health Monitoring">
+                    <div class="card-body">
+                        <h5 class="card-title">Crop Health Monitoring </h5>
+                        <p class="card-text">Monitor crop health with advanced sensors and AI-powered data analysis. </p>
+                        <a href="#" class="btn btn-success">Learn More </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">    <!-- card 6-->
+                <div class="card d-flex flex-column h-100">
+                    <img src="images/marketAccessSolutions.jpg" class="card-img-top" alt="Market Access Solutions">
+                    <div class="card-body">
+                        <h5 class="card-title">Market Access Solutions </h5>
+                        <p class="card-text">Gain access to global markets and increase your sales through our strategic partnerships. </p>
+                        <a href="#" class="btn btn-success">Learn More </a>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+
+    <footer class="bg-light py-4 mt-5">
+        <div class="container text-center">
+            <p>&copy; 2025 AgriSmart Hub | All Rights Reserved </p>
+            <div>
+                <a class="btn btn-outline-dark btn-sm mx-2" href="http://facebook.com">Facebook </a>
+                <a class="btn btn-outline-dark btn-sm mx-2" href="http://twitter.com">Twitter </a>
+                <a class="btn btn-outline-dark btn-sm mx-2" href="http://Instagram.com">Instagram </a>
+                <a class="btn btn-outline-dark btn-sm mx-2" href="http://tiktok.com">Tiktok </a>
+            </div>
+        </div>     
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-</body>
-</html> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0zPiYy6SHptfl6rBIX12tbzzh6cRSX02Uq9ebJjjHeQQwwV4" crossorigin="anonymous"></script>
 
+</body>
+</html>
