--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgriSmart Hub - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
@@ -27,16 +26,14 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section class="hero-section">
         <div class="container text-center">
             <h1 class="display-4 mb-4">Transforming Agriculture with Technology</h1>
-            <p class="lead mb-4">Connecting farmers, buyers, and experts for sustainable farming</p>
+            <p class="lead">Connecting farmers, buyers, and experts for sustainable farming</p>
             <button class="btn btn-light btn-lg">Join Now</button>
         </div>
     </section>
 
-    <!-- Features Section -->
     <section class="py-5">
         <div class="container">
             <div class="row g-4">
@@ -68,15 +65,14 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="py-4">
         <div class="container text-center">
             <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
             <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr#"><i class="bi bi-facebook"></i></a>
+                <a href="https://x.com/"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
     </footer>
