--- a/about.html
+++ b/about.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - AgriSmart Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
@@ -27,12 +26,11 @@
         </div>
     </nav>
 
-    <!-- Two Column Layout -->
     <section class="py-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="assets/images/about-image.jpg" alt="About AgriSmart Hub" class="img-fluid rounded">
+                    <img src="assets/images/about.jpg" alt="About AgriSmart Hub" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6">
                     <h2>Our Story</h2>
@@ -43,7 +41,6 @@
         </div>
     </section>
 
-    <!-- Mission & Vision -->
     <section class="py-5 bg-light">
         <div class="container">
             <div class="row g-4">
@@ -69,7 +66,7 @@
         </div>
     </section>
 
-    <!-- Progress Section -->
+    
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Our Progress</h2>
@@ -94,15 +91,14 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="py-4">
         <div class="container text-center">
             <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
             <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr#"><i class="bi bi-facebook"></i></a>
+                <a href="https://x.com/"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
     </footer>
