--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - AgriSmart Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
@@ -27,11 +26,9 @@
         </div>
     </nav>
 
-    <!-- Contact Section -->
     <section class="py-5">
         <div class="container">
             <div class="row">
-                <!-- Contact Form -->
                 <div class="col-md-8">
                     <div class="contact-form">
                         <h3 class="mb-4">Get In Touch</h3>
@@ -59,7 +56,6 @@
                     </div>
                 </div>
                 
-                <!-- Contact Details -->
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
@@ -87,7 +83,6 @@
         </div>
     </section>
 
-    <!-- Google Map -->
     <section class="py-5 bg-light">
         <div class="container">
             <h3 class="text-center mb-4">Find Us</h3>
@@ -102,15 +97,14 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="py-4">
         <div class="container text-center">
             <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
             <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr#"><i class="bi bi-facebook"></i></a>
+                <a href="https://x.com/"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
     </footer>
