--- a/innovations.html
+++ b/innovations.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Innovations - AgriSmart Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">AgriSmart Hub</a>
@@ -27,7 +26,6 @@
         </div>
     </nav>
 
-    <!-- Carousel -->
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Latest Innovations</h2>
@@ -39,21 +37,29 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/farmingimg.jpg" class="d-block w-100" alt="AI-Powered Farming">
+                        <div class="over-lay-image">
+
+                            <img src="assets/images/waqar-mujahid-NU_s4KI_zME-unsplash.jpg" class="d-block w-100" alt="AI-Powered Farming">
+                        </div>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>AI-Powered Farming</h5>
                             <p>Artificial Intelligence algorithms for predictive analytics and crop management.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/adele-payman-2oYMwuFgnTg-unsplash.jpg" class="d-block w-100" alt="IoT Sensors">
+                        <div class="over-lay-image">
+
+                        <img src="./assets/images/james-baltz-yihX4Rq-JsI-unsplash.jpg" class="d-block w-100" alt="IoT Sensors">
+                        </div>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>IoT Sensor Networks</h5>
                             <p>Wireless sensor networks for real-time field monitoring and data collection.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/Richard.jpg" class="d-block w-100" alt="Blockchain Supply Chain">
+                        <div class="over-lay-image">
+                        <img src="assets/images/marketAccessSolutions.jpg" class="d-block w-100" alt="Blockchain Supply Chain">
+                       </div>
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Blockchain Supply Chain</h5>
                             <p>Transparent and secure supply chain management using blockchain technology.</p>
@@ -70,7 +76,6 @@
         </div>
     </section>
 
-    <!-- YouTube Video -->
     <section class="py-5 bg-light">
         <div class="container">
             <div class="Embeded">
@@ -80,15 +85,14 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="py-4">
         <div class="container text-center">
             <p>&copy; 2025 AgriSmart Hub. All rights reserved.</p>
             <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr#"><i class="bi bi-facebook"></i></a>
+                <a href="https://x.com/"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a>
             </div>
         </div>
     </footer>
