--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
             
             <div class="col-md-4">    <!-- card 1-->
                 <div class="card d-flex flex-column h-100">
-                    <img src="images/smartIrrigation.jpg" class="card-img-top" alt="Smart Irrigation">
+                    <img src="assets/images/smartIrrigation.jpg" class="card-img-top" alt="Smart Irrigation">
                     <div class="card-body">
                         <h5 class="card-title">Smart Irrigation</h5>
                         <p class="card-text">Optimize water usage for efficient farming with real-time weather data and soil moisture sensors. </p>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="col-md-4">    <!-- card 2-->
-                <div class="card d-flex flex-column h-100">
+                <div class="assets/card d-flex flex-column h-100">
                     <img src="images/droneMapping.jpg" class="card-img-top" alt="Drone Mapping">
                     <div class="card-body">
                         <h5 class="card-title">Drone Mapping </h5>
@@ -59,7 +59,7 @@
 
             <div class="col-md-4">    <!-- card 3-->
                 <div class="card d-flex flex-column h-100">
-                    <img src="images/digitalMarketplace.jpg" class="card-img-top" alt="Digital Marketplace">
+                    <img src="assets/images/digitalMarketplace.jpg" class="card-img-top" alt="Digital Marketplace">
                     <div class="card-body">
                         <h5 class="card-title">Digital Marketplace </h5>
                         <p class="card-text">Connect with buyers and sellers in a secure online marketplace for agricultural products. </p>
@@ -70,7 +70,7 @@
 
             <div class="col-md-4">    <!-- card 4-->
                 <div class="card d-flex flex-column h-100">
-                    <img src="images/precisionFarmingTools.jpg" class="card-img-top" alt="Precision Farming Tools">
+                    <img src="assets/images/precisionFarmingTools.jpg" class="card-img-top" alt="Precision Farming Tools">
                     <div class="card-body">
                         <h5 class="card-title">Precision Farming Tools </h5>
                         <p class="card-text">Enhance your farming operations with tools that optimize yield prediction and resource use. </p>
@@ -81,7 +81,7 @@
 
             <div class="col-md-4">    <!-- card 5-->
                 <div class="card d-flex flex-column h-100">
-                    <img src="images/cropHealthMonitoring.jpg" class="card-img-top" alt="Crop Health Monitoring">
+                    <img src="assets/images/cropHealthMonitoring.jpg" class="card-img-top" alt="Crop Health Monitoring">
                     <div class="card-body">
                         <h5 class="card-title">Crop Health Monitoring </h5>
                         <p class="card-text">Monitor crop health with advanced sensors and AI-powered data analysis. </p>
@@ -92,7 +92,7 @@
 
             <div class="col-md-4">    <!-- card 6-->
                 <div class="card d-flex flex-column h-100">
-                    <img src="images/marketAccessSolutions.jpg" class="card-img-top" alt="Market Access Solutions">
+                    <img src="assets/images/marketAccessSolutions.jpg" class="card-img-top" alt="Market Access Solutions">
                     <div class="card-body">
                         <h5 class="card-title">Market Access Solutions </h5>
                         <p class="card-text">Gain access to global markets and increase your sales through our strategic partnerships. </p>
