--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
 
             <div class="col-md-4">    <!-- card 2-->
                 <div class="assets/card d-flex flex-column h-100">
-                    <img src="images/droneMapping.jpg" class="card-img-top" alt="Drone Mapping">
+                    <img src="assets/images/droneMapping.jpg" class="card-img-top" alt="Drone Mapping">
                     <div class="card-body">
                         <h5 class="card-title">Drone Mapping </h5>
                         <p class="card-text">Get aerial views of your farm and analyze crop health with drone-based mapping technology. </p>
